@@ -28,6 +28,7 @@
     the selection colour - use same colour, but set 50% transparent.
 23. Add 4 pixel padding to dock window titlebars.
 24. Default sub-menu popup delay to 225 - matches Gtk2 standard default.
+25. When saving a preset, or selecting a preset, update the kwin settings.
 
 1.5.2
 -----
